# api-experiments

./: .gitignore  LICENSE  README.md  TODO.md  agentic_prompt.txt  agentic_summary.txt  config.py  cr_s1e1_o4-mini.md  experiments.py  prompts.py  pyproject.toml
decent_summaries/: cr_s1e1_4_1_mini.txt  cr_s1e1_o4-mini.md  cr_s1e1_o4_mini.md  cr_s1e2_2025_05_25.txt  cr_s1e2_o4-mini.md  cr_s1e33_o4-mini.md  nietzsche_o4-mini.md  notes_d_o4-mini.md  pg.txt_o4-mini.md  plato_o4-mini.md  pokemon_agent.txt_o4-mini.md  pokemon_agent_4_1_mini.md  pokemon_agent_o3.md  pokemon_agent_o4-mini.md  pokemon_agent_o4_mini.md
decent_summaries/o3_pokemon_expensive/: emulator.py_o3.md  memory_reader.py_o3.md  overall_summary_o3.md  prompts.py_o3.md  simple_agent.py_o3.md  tool_definitions.py_o3.md  utils.py_o3.md
project_sunrise/: config.py  experiments.py  prompts.py  summarize.py
tests/: test_summarize.py
texts/: cr_s1e1.txt
