[project]
name = "project_sunrise"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Larocca",email = "laroccajacob90@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.82.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
